Fix truncated Add by Identifier popover. Fix #627
Also repositioned it to behave like in Zotero on desktops.

--- a/src/scss/components/_popover.scss
+++ b/src/scss/components/_popover.scss
@@ -6,7 +6,6 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	max-width: $popover-max-width;
 	font-size: $font-size-base;
 	word-wrap: break-word;
 	background-color: $popover-bg;
